--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,30 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background: #000028;
+  --accent: #ff0070;
+  --text: #f1b2ce;
+  --image: url("../images/cover-image-dark.png");
+  --header: #db00ff;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header__rec {
+  display: flex;
+}
+
+.theme-dark .header__theme-menu-button,
+.theme-dark .section-title {
+  color: var(--accent);
+}
+
+.theme-dark .text-accent {
+  color: var(--background);
+}
+
+.theme-dark .header::before,
+.theme-dark .footer::before,
+.theme-dark .header::after,
+.theme-dark .footer::after,
+.theme-dark .header__theme-menu-button,
+.theme-dark .header__theme-menu-button:hover::after,
+.theme-dark .header__theme-menu-button_active::after {
+  border-color: var(--accent);
 }
