--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,57 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background: #fff1f7;
+  --accent: #ff8dcb;
+  --text: #353430;
+  --image: url("../images/cover-image-light.png");
+  --header: #ffc2e6;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header__record-decoration {
+  display: none;
+}
+
+.theme-light .header::before,
+.theme-light .footer::before,
+.theme-light .header::after,
+.theme-light .footer::after,
+.theme-light .header__theme-menu-button,
+.theme-light .header__theme-menu-button:hover::after,
+.theme-light .header__theme-menu-button_active::after {
+  border-color: var(--text);
+}
+
+.theme-light .header__theme-menu-button,
+.theme-light .main__section-title,
+.theme-light .title-accent {
+  color: var(--text);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background: #fff1f7;
+    --accent: #ff8dcb;
+    --text: #353430;
+    --image: url("../images/cover-image-light.png");
+    --header: #ffc2e6;
+  }
+
+   .header__record-decoration {
+    display: none;
+  }
+
+  .header::before,
+  .footer::before,
+  .header::after,
+  .footer::after,
+  .header__theme-menu-button,
+  .header__theme-menu-button:hover::after,
+  .header__theme-menu-button_active::after {
+    border-color: var(--text);
+  }
+  
+  .header__theme-menu-button,
+  .main__section-title,
+  .title-accent {
+    color: var(--text);
+  }
 }
